# smart-home-system

./: .gitignore  CMakeLists.txt  README.md
include/: LogService.h
include/command_pattern/: CommandP.h
include/detection_system/: AlarmHandler.h  EmergencyHandler.h  FireCallHandler.h  LightOnHandler.h  ObservableDetector.h
include/device_hierarchy/: Alarm.h  Camera.h  DetectorFactory.h  Device.h  GasDetector.h  HomeDetectorFactory.h  IObserver.h  Light.h  MusicPlayer.h  SmokeDetector.h  TV.h
include/mode_management/: Mode.h
include/security_system/: Alarm.h  AlarmHandler.h  AlarmHandlerF.h  BaseHandler.h  Camera.h  Device.h  IObserver.h  ISequenceHandler.h  LightOn.h  LightOnHandler.h  PoliceCallHandler.cpp  PoliceCallHandler.h  SecurityEvent.h  SecurityObserver.h  SecuritySystem.cpp  SecuritySystem.h  test.cpp
include/state_management/: ChangeState.h  DeviceAdjustment.h  DeviceController.h  HighPerformanceState.h  LowPowerState.h  NormalState.h  SleepState.h  State.h  SystemStateManager.h  main.cpp
include/storage_logging/: LogService.h  LogServiceInterface.h
src/: LogService.cpp  Mode.cpp  main.cpp  modecode.cpp
src/detection_system/: AlarmHandler.cpp  EmergencyHandler.cpp  FireCallHandler.cpp  LightOnHandler.cpp  ObservableDetector.cpp  test.cpp
src/device_hierarchy/: test.cpp
src/menu_interaction/: main.cpp
src/mode_management/: Mode.cpp  test.cpp
src/security_system/: AlarmHandler.cpp  AlarmHandlerF.cpp  LightOnHandler.cpp  PoliceCallHandler.cpp  SecuritySystem.cpp  test.cpp
src/state_management/: SystemStateManager.cpp  test.cpp
src/storage_logging/: LogService.cpp  test.cpp
